--- a/fb-clone-2/package.json
+++ b/fb-clone-2/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.1",
+    "install": "^0.13.0",
     "next": "10.2.3",
+    "next-auth": "^3.25.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
