--- a/fb-clone-2/package.json
+++ b/fb-clone-2/package.json
@@ -9,15 +9,18 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.1",
+    "firebase": "^8.6.7",
     "install": "^0.13.0",
     "next": "10.2.3",
     "next-auth": "^3.25.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^3.0.4",
+    "tailwind-scrollbar-hide": "^1.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.0",
+    "postcss": "^8.3.4",
     "tailwindcss": "^2.1.4"
   }
 }
